changed z index of carousel to fix overlapping with navbar and other color changes to theme

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -22,7 +22,7 @@
 
 .carousel-slide.active {
   opacity: 1;
-  z-index: 1;
+  z-index: 0;
 }
 
 .carousel-slide img {
